--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.2.*",
-		"rcrowe/twigbridge": "0.6.*"
+		"rcrowe/twigbridge": "0.6.*",
+		"laravelbook/ardent": "2.*"
 	},
 	"require-dev": {
 		"xethron/migrations-generator": "dev-master"
